[gd_scene load_steps=3 format=3 uid="uid://item_detail_panel_001"]

[ext_resource type="Script" path="res://src/ui/inventory/detail_panel.gd" id="1_script"]
[ext_resource type="Theme" uid="uid://inventory_theme_001" path="res://ui/theme/inventory_theme.tres" id="2_theme"]

[node name="DetailPanel" type="PanelContainer"]
custom_minimum_size = Vector2(250, 400)
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -250.0
grow_horizontal = 0
grow_vertical = 2
theme = ExtResource("2_theme")
script = ExtResource("1_script")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 12

[node name="TitleBox" type="PanelContainer" parent="VBox"]
layout_mode = 2
theme_type_variation = &"GlassPanel"

[node name="Header" type="HBoxContainer" parent="VBox/TitleBox"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="IconRect" type="TextureRect" parent="VBox/TitleBox/Header"]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[node name="TitleBox" type="VBoxContainer" parent="VBox/TitleBox/Header"]
layout_mode = 2
size_flags_horizontal = 3

[node name="NameLabel" type="Label" parent="VBox/TitleBox/Header/TitleBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Item Name"

[node name="TypeLabel" type="Label" parent="VBox/TitleBox/Header/TitleBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.6, 0.6, 1)
theme_override_font_sizes/font_size = 12
text = "Material"

[node name="DescLabel" type="RichTextLabel" parent="VBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
theme_override_colors/default_color = Color(0.8, 0.8, 0.8, 1)
theme_override_font_sizes/normal_font_size = 14
bbcode_enabled = true
text = "Item Description goes here..."
fit_content = true

[node name="HSeparator" type="HSeparator" parent="VBox"]
layout_mode = 2

[node name="StatsContainer" type="VBoxContainer" parent="VBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 4

[node name="HSeparator2" type="HSeparator" parent="VBox"]
layout_mode = 2

[node name="Actions" type="HBoxContainer" parent="VBox"]
layout_mode = 2
alignment = 1

[node name="UseButton" type="Button" parent="VBox/Actions"]
unique_name_in_owner = true
layout_mode = 2
text = "Use"

[node name="DropButton" type="Button" parent="VBox/Actions"]
unique_name_in_owner = true
layout_mode = 2
text = "Drop"
